# ml-2-modulo

./: LICENSE  Makefile  README.md  pyproject.toml
feast_service/dsrp_fs_mle_2_project/feature_repo/: bookings.py  feature_definitions.py  feature_store.yaml
feast_service/dsrp_fs_mle_2_project/feature_repo/data/: driver_stats.parquet  online_store.db  registry.db
notebooks/: advance_supervised_models.ipynb  advanced_unsupervised.ipynb  fe_0.ipynb  fe_0_ml2.ipynb  feast_mlflow.ipynb  feature_engineering.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
package-dsrp-mle2/: __init__.py  dataset.py  features.py  plots.py
package-dsrp-mle2/modeling/: predict.py  train.py
